--- a/views/solve.erb
+++ b/views/solve.erb
@@ -52,6 +52,19 @@
   </div>
 <% end %>
 
+<% if @solve.puzzle.roofpigable? %>
+  <div class="row">
+    <div class="col-lg-8">
+      <a href="javascript:void(0);"><h3 class="link-header"
+          id="roofpig-header">Playback
+          <span id="roofpig-arrow" class="arrow glyphicon glyphicon-chevron-right"></span>
+      </h3></a>
+      <div id="roofpig">
+        <div class="roofpig" data-config="<%= roofpig_form(@solve) %>"></div>
+      </div>
+    </div>
+  </div>
+<% end %>
 
 <%= erb :solve_links %>
 
