handle roofpig args correctly, fix alg=alg= glitch

--- a/views/solve.erb
+++ b/views/solve.erb
@@ -60,7 +60,7 @@
           <span id="roofpig-arrow" class="arrow glyphicon glyphicon-chevron-right"></span>
       </h3></a>
       <div id="roofpig">
-        <div class="roofpig" data-config="alg=<%= roofpig_form(@solve) %>|colors=F:g B:b U:w D:y R:r L:o"></div>
+        <div class="roofpig" data-config="<%= roofpig_form(@solve) %>"></div>
       </div>
     </div>
   </div>
